--- a/index.html
+++ b/index.html
@@ -23,5 +23,121 @@
         </ul>
       </nav>
     </header>
+    <main>
+      <section class="container">
+        <img src="css/images/1.png" alt="building" />
+      </section>
+      <section class="space container-2">
+        <h2>რატომ ვიყენებთ მას და საიდან მოდის ეს ტექსტი?</h2>
+        <div>
+          <img src="css/images/2.png" alt="building" />
+          <img src="css/images/3.png" alt="building" />
+          <img src="css/images/4.png" alt="building" />
+          <img src="css/images/5.png" alt="building" />
+          <img src="css/images/6.png" alt="building" />
+        </div>
+      </section>
+      <section class="container-3 space">
+        <p>
+          ცნობილი ფაქტია, რომ გვერდის წაკითხვად შიგთავსს შეუძლია მკითხველის
+          ყურადღება მიიზიდოს და დიზაინის აღქმაში ხელი შეუშალოს. Lorem Ipsum-ის
+          გამოყენებით ვღებულობთ იმაზე მეტ-ნაკლებად სწორი გადანაწილების ტექსტს,
+          ვიდრე ერთიდაიგივე გამეორებადი სიტყვებია ხოლმე. შედეგად, ტექსტი
+          ჩვეულებრივ ინგლისურს გავს, მისი წაითხვა კი შეუძლებელია. დღეს უამრავი
+          პერსონალური საგამომცემლო პროგრამა და ვებგვერდი იყენებს Lorem Ipsum-ს,
+          როგორც დროებით ტექსტს წყობის შესავსებად; Lorem Ipsum-ის მოძებნისას კი
+          საძიებო სისტემები ბევრ დაუსრულებელ გვერდს გვიჩვენებენ. წლების მანძილზე
+          ამ ტექსტის უამრავი ვერსია გამოჩნდა, ზოგი შემთხვევით დაშვებული შეცდომის
+          გამო, ზოგი კი — განზრახ, ხუმრობით.
+        </p>
+        <p>
+          გავრცელებული მოსაზრებით, Lorem Ipsum შემთხვევითი ტექსტი სულაც არაა.
+          მისი ფესვები ჯერკიდევ ჩვ. წ. აღ-მდე 45 წლის დროინდელი კლასიკური
+          ლათინური ლიტერატურიდან მოდის. ვირჯინიის შტატში მდებარე ჰემპდენ-სიდნეის
+          კოლეჯის პროფესორმა რიჩარდ მაკკლინტოკმა აიღო ერთ-ერთი ყველაზე იშვიათი
+          ლათინური სიტყვა “consectetur” Lorem Ipsum-პასაჟიდან და გადაწყვიტა
+          მოეძებნა იგი კლასიკურ ლიტერატურაში. ძიება შედეგიანი აღმოჩნდა — ტექსტი
+          Lorem Ipsum გადმოწერილი ყოფილა ციცერონის “de Finibus Bonorum et
+          Malorum”-ის 1.10.32 და 1.10.33 თავებიდან. ეს წიგნი ეთიკის თეორიის
+          ტრაქტატია, რომელიც რენესანსის პერიოდში ძალიან იყო გავრცელებული. Lorem
+          Ipsum-ის პირველი ხაზი, “Lorem ipsum dolor sit amet…” სწორედ ამ წიგნის
+          1.10.32 თავიდანაა. <br />
+          მათთვის, ვისაც აინტერესებს, ქვევით მოყვანილია Lorem Ipsum-ის ორიგინალი
+          ნაწყვეტი 1500-იანი წლებიდან. ასევე შეგიძლიათ ნახოთ 1.10.32 და 1.10.33
+          თავები ციცერონის “de Finibus Bonorum et Malorum”-დან, რომელსაც თან
+          ერთვის 1914 წელს ჰ. რექჰამის შესრულებული ინგლისურენოვანი თარგმანი.
+        </p>
+        <p>
+          დღეს უკვე Lorem Ipsum-პასაჟის უამრავი ვერსია არსებობს. მათი დიდი
+          ნაწილი ხუმრობით არის შეცვლილი, ბევრი კი უბრალოდ სიტყვების შემთხვევითი
+          გენერირებით დაიწერა. ინტერნეტში არსებული გენერატორები, როგორც წესი,
+          წინასწარ განსაზღვრული ტექსტის ნაგლეჯს იმეორებენ ხოლმე, ამიტომ ეს
+          პირველი ნამდვილი გენერატორია. იგი რთული და მართებული სტრუქტურის
+          წინადადებების ასაწყობად 200-მდე ლათინური სიტყვისგან შემდგარ ლექსიკონს
+          იყენებს. შედეგად მიიღება ტექსტი, რომელიც ვიზუალურად მაქსიმალურად
+          ახლოსაა რეალურთან. გენერირებული Lorem Ipsum არასოდეს არ არის
+          გამეორებადი, შემთხვევითი სიტყვების ან ხუმრობების შემცველი.
+        </p>
+        <div class="space"><p class="read-more">დამატებითი ინფორმაცია</p></div>
+      </section>
+      <section class="container-4">
+        <div class="container-5">
+          <div class="line-1">
+            <h2>კონტაქტი</h2>
+            <p>
+              Lorem Ipsum საბეჭდი და ტიპოგრაფიული ინდუსტრიის უშინაარსო ტექსტია.
+              იგი სტანდარტად 1500-იანი წლებიდან იქცა, როდესაც უცნობმა მბეჭდავმა
+              ამწყობ დაზგაზე წიგნის საცდელი ეგზემპლარი დაბეჭდა.
+            </p>
+            <div>
+              <iframe
+                class="map"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d95209.2695494938!2d44.742793950050135!3d41.77897042745493!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x404472b82b6f835d%3A0x13d9fb6a0fac64e2!2sM%2FS%20Nadzaladevi!5e0!3m2!1sen!2sus!4v1709487454847!5m2!1sen!2sus"
+                width="463"
+                height="197"
+                style="border: 0"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"
+              ></iframe>
+            </div>
+            <div class="last-contact">
+              <div class="box"><img src="css/images/tel.png" alt="tel" /></div>
+              <a href="tel:+995 555 444 333"> +995 555 444 333</a>
+              <div class="box">
+                <img src="css/images/mail.png" alt="mail" />
+              </div>
+              <a href="mailto:example@gmail.com"> example@gmail.com</a>
+            </div>
+          </div>
+          <div class="line-2">
+            <form action="#">
+              <div class="form-row">
+                <label for="user-info">სახელი,გვარი</label>
+                <input type="text" name="" id="user-info" required />
+              </div>
+              <div class="form-row">
+                <label for="user-mail">ელ.ფოსტა</label>
+                <input type="email" name="" id="user-mail" required />
+              </div>
+              <div class="form-row">
+                <label for="phone">ტელეფონის ნომერი</label>
+                <input type="tel" name="" id="phone" required />
+              </div>
+              <div class="form-row">
+                <label for="user-message">შეტყობინება</label>
+                <textarea
+                  name="message"
+                  id="user-message"
+                  cols="30"
+                  rows="10"
+                ></textarea>
+              </div>
+              <div class="button">
+                <button type="submit">გაგზავნა</button>
+              </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
