--- a/index.html
+++ b/index.html
@@ -140,7 +140,26 @@
       </section>
     </main>
     <footer>
-        
+        <div class="line"></div>
+      <div class="footer-container">
+        <div>
+          <p>ყველა უფლება დაცულია</p>
+        </div>
+        <div>
+          <div>
+            <p>დამზადებულია</p>
+            <img class="hart" src="css/images/Group 73.png" alt="hart" />
+            <p>-ით</p>
+          </div>
+          <div>
+            <img
+              clsass="smartweb"
+              src="css/images/Group 72.png"
+              alt="smartacademy"
+            />
+          </div>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
