add burger menu

--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
         </div>
         
       </div>
+      <div class="burger">
+        <img src="css/images/burger.png" alt="burger">
+      </div>
     </footer>
   </body>
 </html>
